--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(DataStructuresHomework6)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(DataStructuresHomework6 main.cpp altnew.cpp altnew.h dlist.h testl.cpp dlist.cpp)
+add_executable(DataStructuresHomework6 main.cpp altnew.cpp altnew.h dlist.h testl.cpp calc.cpp call.cpp dlist_test.cpp calc_test.cpp call_test.cpp)
